--- a/style.css
+++ b/style.css
@@ -1,3 +1,14 @@
+body {
+    text-align: center;
+    background: linear-gradient(#023f70 0%, #aad6fa 100%);
+    background-repeat: no-repeat;
+}
+
+.Blah {
+    border-radius: 50%;
+
+}
+
 #welcome {
     position: absolute;
     overflow: hidden;
@@ -12,6 +23,7 @@
     display: table;
     width: 100%;
     height: 100%;
+    
 }
 
 h1 {
@@ -22,9 +34,10 @@ h1 {
 }
 
 #name {
-    font-size: 30px;
+    font-size: 50px;
     line-height: 1.2;
-    font-family: cursive
+    font-family: 'Cinzel Decorative', cursive;
+
 }
 
 h2 {
@@ -48,11 +61,12 @@ h2 {
     margin: 8px auto;
 }
 
+
 p {
     max-width: 450px;
     margin: 25px auto;
     font-size: 17px;
-    line-height: 1.3
+    line-height: 1.3;
 }
 
 .parallax-inner {
@@ -66,12 +80,6 @@ p {
     width: 175px;
     border-radius: 50%;
     margin-bottom: 50px;
-}
-
-body {
-    text-align: center;
-    background: linear-gradient(#023f70 0%, #aad6fa 100%);
-    background-repeat: no-repeat;
 }
 
 .menu {
@@ -96,7 +104,8 @@ body {
 }
 
 .links:hover {
-    background-color: dodgerblue;
+    font-size: 25px;
+    text-decoration: underline;
 }
 
 html {
@@ -105,9 +114,35 @@ html {
 
 a {
     text-decoration: none;
+    color: crimson;
+    text-shadow: 2px 2px gainsboro;
 }
-
 
 .article:hover {
     color: fuchsia;
 }
+
+
+#writings a {
+    text-shadow: none !important;
+    text-decoration: underline !important;
+    color: blue !important;
+}
+
+#contact {
+    background: firebrick;
+}
+
+#contact iframe {
+    width: 100%;
+}
+
+.contact_1 h3 {
+    display: inline;
+}
+
+.contact_1 a {
+    color: white;
+    text-shadow: none;
+}
+
